Add a proxy executable

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,6 +41,7 @@ option(XMSG_BUILD_TESTS "Build tests" ON)
 
 add_subdirectory("src/core")
 add_subdirectory("src/proto")
+add_subdirectory("src/sys")
 
 if (XMSG_BUILD_TESTS)
   enable_testing()
