Add advanced connection setup

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -3,6 +3,7 @@ include_directories(${ZMQ_INCLUDE_DIRS})
 set(XMSG_FILES
   address.cpp
   connection.cpp
+  connection_setup.cpp
   regdis.cpp
   topic.cpp
   util.cpp
