cmake: fix creation of xmsg shared library
Cannot create a static library with the xmsg protobuf files and then
link it with the core xmsg shared library. But the xmsgproto library is
useful to pass the runtime include directory with the proto headers to
the core sources (with target_include_directories).

Solve by replacing the xmsgproto static library with a CMake 3.x OBJECT
library, which compiles objects files only. Then this objects can be
added to the core xmsg library.

To pass the xmsg proto headers directory, use an INTERFACE only library
called xmsgproto_headers, and link xmsg to it. No objects are actually
linked, but its properties are used by CMake to handle dependencies and
paths (i.e. the include directory).

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -6,8 +6,8 @@ set(XMSG_FILES
   util.cpp
 )
 
-add_library(xmsg SHARED ${XMSG_FILES})
-target_link_libraries(xmsg xmsgproto ${ZMQ_LIBRARIES})
+add_library(xmsg SHARED ${XMSG_FILES} $<TARGET_OBJECTS:xmsgproto>)
+target_link_libraries(xmsg xmsgproto_headers ${ZMQ_LIBRARIES})
 
 install(DIRECTORY ${CMAKE_SOURCE_DIR}/include/xmsg/ DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/xmsg)
 install(TARGETS xmsg DESTINATION ${CMAKE_INSTALL_LIBDIR})
