--- a/src/proto/CMakeLists.txt
+++ b/src/proto/CMakeLists.txt
@@ -13,9 +13,14 @@ set(PROTO_WRAPPERS
 )
 
 PROTOBUF_GENERATE_CPP(PROTO_SOURCES PROTO_HEADERS ${PROTO_FILES})
-add_library(xmsgproto STATIC ${PROTO_SOURCES} ${PROTO_HEADERS})
-target_link_libraries(xmsgproto ${PROTOBUF_LIBRARIES})
-target_include_directories(xmsgproto PUBLIC ${CMAKE_CURRENT_BINARY_DIR})
+
+add_library(xmsgproto OBJECT ${PROTO_SOURCES} ${PROTO_HEADERS})
+set_property(TARGET xmsgproto PROPERTY COMPILE_FLAGS "-fPIC")
+
+add_library(xmsgproto_headers INTERFACE)
+target_link_libraries(xmsgproto_headers INTERFACE ${PROTOBUF_LIBRARIES})
+target_include_directories(xmsgproto_headers INTERFACE
+  ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR} ${PROTOBUF_INCLUDE_DIRS})
 
 install(FILES ${PROTO_HEADERS} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/xmsg)
 install(FILES ${PROTO_WRAPPERS} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/xmsg)
