--- a/test/core/CMakeLists.txt
+++ b/test/core/CMakeLists.txt
@@ -1,4 +1,5 @@
 include_directories(${GMOCK_INCLUDE_DIRS})
+include_directories(${CMAKE_SOURCE_DIR}/src/core)
 
 add_executable(test_topic topic_test.cpp)
 add_dependencies(test_topic googlemock)
@@ -9,3 +10,8 @@ add_executable(test_util util_test.cpp)
 add_dependencies(test_util googlemock)
 add_test(test_util test_util)
 target_link_libraries(test_util xmsg ${GMOCK_LIBRARIES})
+
+add_executable(test_regdis regdis_test.cpp)
+add_dependencies(test_regdis googlemock)
+add_test(test_regdis test_regdis)
+target_link_libraries(test_regdis xmsg ${GMOCK_LIBRARIES})
