--- a/doc/Doxyfile.in
+++ b/doc/Doxyfile.in
@@ -768,7 +768,8 @@ WARN_LOGFILE           =
 INPUT                  = "@CMAKE_SOURCE_DIR@/include/xmsg" \
                          "@CMAKE_BINARY_DIR@/src/proto" \
                          "@CMAKE_SOURCE_DIR@/src/proto" \
-                         "@CMAKE_SOURCE_DIR@/src/core"
+                         "@CMAKE_SOURCE_DIR@/src/core" \
+                         "@CMAKE_SOURCE_DIR@/doc"
 
 # This tag can be used to specify the character encoding of the source files
 # that doxygen parses. Internally doxygen uses the UTF-8 encoding. Doxygen uses
