Connection: add new control socket
Use this socket to synchronize connection and subscription.

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -12,6 +12,7 @@ set(XMSG_FILES
   topic.cpp
   subscription.cpp
   util.cpp
+  zhelper.cpp
 )
 
 add_library(xmsg SHARED ${XMSG_FILES} $<TARGET_OBJECTS:xmsgproto>)
