Extract proxy to its own class

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -7,6 +7,7 @@ set(XMSG_FILES
   connection.cpp
   connection_pool.cpp
   connection_setup.cpp
+  proxy.cpp
   regdis.cpp
   topic.cpp
   subscription.cpp
