--- a/src/sys/CMakeLists.txt
+++ b/src/sys/CMakeLists.txt
@@ -1,6 +1,6 @@
 include_directories(${ZMQ_INCLUDE_DIRS})
 
-add_executable(cx_proxy xmsg_proxy.cpp)
+add_executable(cx_proxy cx_proxy.cpp)
 target_link_libraries(cx_proxy xmsg)
 
 install(TARGETS cx_proxy DESTINATION ${CMAKE_INSTALL_BINDIR})
