cmake: update external project for GMock/GTest
Create a proper imported target for the libraries, and link the test to
them, instead of using a dependency on the external project target.

--- a/test/core/CMakeLists.txt
+++ b/test/core/CMakeLists.txt
@@ -1,35 +1,27 @@
-include_directories(${GMOCK_INCLUDE_DIRS})
 include_directories(${CMAKE_SOURCE_DIR}/src/core)
 
 add_executable(test_message message_test.cpp)
-add_dependencies(test_message googlemock)
 add_test(test_message test_message)
-target_link_libraries(test_message xmsg ${GMOCK_LIBRARIES})
+target_link_libraries(test_message xmsg gmock)
 
 add_executable(test_topic topic_test.cpp)
-add_dependencies(test_topic googlemock)
 add_test(test_topic test_topic)
-target_link_libraries(test_topic xmsg ${GMOCK_LIBRARIES})
+target_link_libraries(test_topic xmsg gmock)
 
 add_executable(test_util util_test.cpp)
-add_dependencies(test_util googlemock)
 add_test(test_util test_util)
-target_link_libraries(test_util xmsg ${GMOCK_LIBRARIES})
+target_link_libraries(test_util xmsg gmock)
 
 add_executable(test_helper zhelper_test.cpp)
-add_dependencies(test_helper googlemock)
 add_test(test_helper test_helper)
-target_link_libraries(test_helper xmsg ${GMOCK_LIBRARIES})
+target_link_libraries(test_helper xmsg gmock)
 
 add_executable(test_subscription subscription_test.cpp)
-add_dependencies(test_subscription googlemock)
-target_link_libraries(test_subscription xmsg ${GMOCK_LIBRARIES})
+target_link_libraries(test_subscription xmsg gmock)
 
 add_executable(test_regdis regdis_test.cpp)
-add_dependencies(test_regdis googlemock)
 add_test(test_regdis test_regdis)
-target_link_libraries(test_regdis xmsg ${GMOCK_LIBRARIES})
+target_link_libraries(test_regdis xmsg gmock)
 
 add_executable(test_registration registrar_test.cpp)
-add_dependencies(test_registration googlemock)
-target_link_libraries(test_registration xmsg ${GMOCK_LIBRARIES})
+target_link_libraries(test_registration xmsg gmock)
