--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -2,11 +2,11 @@ set(XMSG_FILES
   xmsg.cpp
   address.cpp
   context.cpp
-  connection.cpp
+  connection_driver.cpp
   connection_pool.cpp
   connection_setup.cpp
   proxy.cpp
-  regdis.cpp
+  registration_driver.cpp
   topic.cpp
   subscription.cpp
   util.cpp
