--- a/src/proto/CMakeLists.txt
+++ b/src/proto/CMakeLists.txt
@@ -9,11 +9,16 @@ set(PROTO_FILES
 PROTOBUF_GENERATE_CPP(PROTO_SOURCES PROTO_HEADERS ${PROTO_FILES})
 
 add_library(xmsgproto OBJECT ${PROTO_SOURCES} ${PROTO_HEADERS})
+target_compile_options(xmsgproto PRIVATE -Wno-extra)
 set_property(TARGET xmsgproto PROPERTY COMPILE_FLAGS "-fPIC")
 
 add_library(xmsgproto_headers INTERFACE)
 target_link_libraries(xmsgproto_headers INTERFACE ${PROTOBUF_LIBRARIES})
 target_include_directories(xmsgproto_headers INTERFACE
-  ${CMAKE_CURRENT_BINARY_DIR} ${PROTOBUF_INCLUDE_DIRS})
+  ${CMAKE_CURRENT_BINARY_DIR}
+)
+target_include_directories(xmsgproto_headers SYSTEM INTERFACE
+  ${PROTOBUF_INCLUDE_DIRS}
+)
 
 install(FILES ${PROTO_HEADERS} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/xmsg/proto)
