--- a/doc/Doxyfile.in
+++ b/doc/Doxyfile.in
@@ -161,7 +161,7 @@ STRIP_FROM_PATH        =
 # specify the list of include paths that are normally passed to the compiler
 # using the -I flag.
 
-STRIP_FROM_INC_PATH    =
+STRIP_FROM_INC_PATH    = "@CMAKE_SOURCE_DIR@/include"
 
 # If the SHORT_NAMES tag is set to YES, doxygen will generate much shorter (but
 # less readable) file names. This can be useful is your file systems doesn't
@@ -442,7 +442,7 @@ EXTRACT_STATIC         = NO
 # for Java sources.
 # The default value is: YES.
 
-EXTRACT_LOCAL_CLASSES  = YES
+EXTRACT_LOCAL_CLASSES  = NO
 
 # This flag is only useful for Objective-C code. If set to YES, local methods,
 # which are defined in the implementation section but not in the interface are
@@ -525,7 +525,7 @@ HIDE_COMPOUND_REFERENCE= NO
 # the files that are included by a file in the documentation of that file.
 # The default value is: YES.
 
-SHOW_INCLUDE_FILES     = NO
+SHOW_INCLUDE_FILES     = YES
 
 # If the SHOW_GROUPED_MEMB_INC tag is set to YES then Doxygen will add for each
 # grouped member an include statement to the documentation, telling the reader
@@ -766,6 +766,7 @@ WARN_LOGFILE           =
 # Note: If this tag is empty the current directory is searched.
 
 INPUT                  = "@CMAKE_SOURCE_DIR@/include/xmsg" \
+                         "@CMAKE_SOURCE_DIR@/include/xmsg/proto" \
                          "@CMAKE_BINARY_DIR@/src/proto" \
                          "@CMAKE_SOURCE_DIR@/src/proto" \
                          "@CMAKE_SOURCE_DIR@/src/core" \
@@ -809,11 +810,13 @@ RECURSIVE              = NO
 # Note that relative paths are relative to the directory from which doxygen is
 # run.
 
-EXCLUDE                = "@CMAKE_SOURCE_DIR@/include/xmsg/connection_pool.h" \
-                         "@CMAKE_SOURCE_DIR@/src/core/connection_driver.h" \
-                         "@CMAKE_SOURCE_DIR@/src/core/connection_pool.cpp" \
+EXCLUDE                = "@CMAKE_SOURCE_DIR@/src/core/connection_driver.h" \
+                         "@CMAKE_SOURCE_DIR@/src/core/connection_driver.cpp" \
                          "@CMAKE_SOURCE_DIR@/src/core/registration_driver.cpp" \
-                         "@CMAKE_SOURCE_DIR@/src/core/registration_driver.h"
+                         "@CMAKE_SOURCE_DIR@/src/core/registration_driver.h" \
+                         "@CMAKE_SOURCE_DIR@/src/core/thread_local.h" \
+                         "@CMAKE_SOURCE_DIR@/src/core/zhelper.h" \
+                         "@CMAKE_SOURCE_DIR@/include/xmsg/third_party" \
 
 # The EXCLUDE_SYMLINKS tag can be used to select whether or not files or
 # directories that are symbolic links (a Unix file system feature) are excluded
@@ -840,22 +843,19 @@ EXCLUDE_PATTERNS       =
 # Note that the wildcards are matched against the file with absolute path, so to
 # exclude all test directories use the pattern */test/*
 
-EXCLUDE_SYMBOLS        = xmsg::proto::internal* \
-                         xmsg::proto::Payload* \
-                         xmsg::proto::Static* \
-                         Payload* \
-                         Data_Type* \
+EXCLUDE_SYMBOLS        = google::protobuf \
+                         std::hash \
+                         xmsg::detail \
+                         xmsg::internal \
                          *_Name \
                          *_Parse \
                          *_MIN \
                          *_MAX \
                          *_ARRAYSIZE* \
-                         T_* \
                          *_descriptor \
                          *_IsValid \
                          *2eproto* \
                          k*FieldNumber \
-                         is_proto_enum* \
 
 # The EXAMPLE_PATH tag can be used to specify one or more files or directories
 # that contain example code fragments that are included (see the \include
@@ -2230,7 +2230,7 @@ TEMPLATE_RELATIONS     = NO
 # The default value is: YES.
 # This tag requires that the tag HAVE_DOT is set to YES.
 
-INCLUDE_GRAPH          = YES
+INCLUDE_GRAPH          = NO
 
 # If the INCLUDED_BY_GRAPH, ENABLE_PREPROCESSING and SEARCH_INCLUDES tags are
 # set to YES then doxygen will generate a graph for each documented file showing
