build: some style fixes to CMake files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,26 +7,28 @@ if (NOT CMAKE_BUILD_TYPE)
 endif()
 
 
-if (NOT CMAKE_INSTALL_BINDIR)
+if(NOT CMAKE_INSTALL_BINDIR)
   set(CMAKE_INSTALL_BINDIR "bin" CACHE PATH "user executables (bin)")
 endif()
 
-if (NOT CMAKE_INSTALL_LIBDIR)
+if(NOT CMAKE_INSTALL_LIBDIR)
   set(CMAKE_INSTALL_LIBDIR "lib" CACHE PATH "object code libraries (lib)")
 endif()
 
-if (NOT CMAKE_INSTALL_SHAREDIR)
+if(NOT CMAKE_INSTALL_SHAREDIR)
   set(CMAKE_INSTALL_SHAREDIR "share" CACHE PATH "other files (share)")
 endif()
 
 if(NOT CMAKE_INSTALL_INCLUDEDIR)
-  set(CMAKE_INSTALL_INCLUDEDIR "include" CACHE PATH "C header files (include)")
+  set(CMAKE_INSTALL_INCLUDEDIR "include" CACHE PATH "header files (include)")
 endif()
 
-mark_as_advanced(CMAKE_INSTALL_BINDIR)
-mark_as_advanced(CMAKE_INSTALL_LIBDIR)
-mark_as_advanced(CMAKE_INSTALL_SHAREDIR)
-mark_as_advanced(CMAKE_INSTALL_INCLUDEDIR)
+mark_as_advanced(
+  CMAKE_INSTALL_BINDIR
+  CMAKE_INSTALL_LIBDIR
+  CMAKE_INSTALL_SHAREDIR
+  CMAKE_INSTALL_INCLUDEDIR
+)
 
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
@@ -58,25 +60,24 @@ find_package(zmq 4.0 REQUIRED)
 
 option(XMSG_BUILD_TESTS "Build tests" ON)
 
-
 add_subdirectory("src/core")
 add_subdirectory("src/proto")
 add_subdirectory("src/sys")
 add_subdirectory("doc")
 
-if (XMSG_BUILD_TESTS)
+if(XMSG_BUILD_TESTS)
   enable_testing()
   include("cmake/External/GMock.cmake")
   add_subdirectory("test/core")
   add_subdirectory("test/perf")
-endif (XMSG_BUILD_TESTS)
+endif()
 
 
 # uninstall target
 configure_file(
-  "${CMAKE_CURRENT_SOURCE_DIR}/cmake/cmake_uninstall.cmake.in"
-  "${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake"
+  "${CMAKE_SOURCE_DIR}/cmake/cmake_uninstall.cmake.in"
+  "${CMAKE_BINARY_DIR}/cmake_uninstall.cmake"
   IMMEDIATE @ONLY)
 
 add_custom_target(uninstall
-  COMMAND ${CMAKE_COMMAND} -P ${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake)
+  COMMAND ${CMAKE_COMMAND} -P ${CMAKE_BINARY_DIR}/cmake_uninstall.cmake)
