--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -29,4 +29,4 @@ if(DOXYGEN_FOUND)
 
   configure_file(${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile.in ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile @ONLY)
 
-endif(DOXYGEN_FOUND)
+endif()
