build: ensure protobuf include dir is used as system
Improve 015f31b42e0b by setting SYSTEM in the right place.
The protobuf headers are required to be included in the CMakeLists
files, so there is no need to set the path in the library target.

--- a/src/proto/CMakeLists.txt
+++ b/src/proto/CMakeLists.txt
@@ -1,4 +1,4 @@
-include_directories(${PROTOBUF_INCLUDE_DIRS})
+include_directories(SYSTEM ${PROTOBUF_INCLUDE_DIRS})
 
 set(PROTO_FILES
   data.proto
@@ -16,9 +16,6 @@ add_library(xmsgproto_headers INTERFACE)
 target_link_libraries(xmsgproto_headers INTERFACE ${PROTOBUF_LIBRARIES})
 target_include_directories(xmsgproto_headers INTERFACE
   ${CMAKE_CURRENT_BINARY_DIR}
-)
-target_include_directories(xmsgproto_headers SYSTEM INTERFACE
-  ${PROTOBUF_INCLUDE_DIRS}
 )
 
 install(FILES ${PROTO_HEADERS} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/xmsg/proto)
