--- a/src/proto/CMakeLists.txt
+++ b/src/proto/CMakeLists.txt
@@ -15,7 +15,7 @@ set_property(TARGET xmsgproto PROPERTY COMPILE_FLAGS "-fPIC")
 add_library(xmsgproto_headers INTERFACE)
 target_link_libraries(xmsgproto_headers INTERFACE ${PROTOBUF_LIBRARIES})
 target_include_directories(xmsgproto_headers INTERFACE
-  ${CMAKE_CURRENT_BINARY_DIR}
-)
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}>)
 
 install(FILES ${PROTO_HEADERS} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/xmsg/proto)
+install(TARGETS xmsgproto_headers EXPORT xMsgTargets)
