build: fix install destinations

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -22,4 +22,8 @@ target_include_directories(xmsg SYSTEM PUBLIC ${ZMQ_INCLUDE_DIRS})
 
 install(DIRECTORY ${CMAKE_SOURCE_DIR}/include/xmsg/
   DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/xmsg)
-install(TARGETS xmsg EXPORT xMsgTargets DESTINATION ${CMAKE_INSTALL_LIBDIR})
+install(TARGETS xmsg EXPORT xMsgTargets
+  LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
+  ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
+  RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
+)
