build: add installation component to headers and config files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -92,7 +92,7 @@ install(EXPORT xMsgTargets
   DESTINATION ${CMAKE_INSTALL_CONFIGDIR})
 
 install(FILES ${PROJECT_BINARY_DIR}${CMAKE_FILES_DIRECTORY}/xmsg-config.cmake
-  DESTINATION ${CMAKE_INSTALL_CONFIGDIR})
+  DESTINATION ${CMAKE_INSTALL_CONFIGDIR} COMPONENT Devel)
 
 
 # uninstall target
