--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -21,7 +21,9 @@ target_include_directories(xmsg PUBLIC
 target_include_directories(xmsg SYSTEM PUBLIC ${ZMQ_INCLUDE_DIRS})
 
 install(DIRECTORY ${CMAKE_SOURCE_DIR}/include/xmsg/
-  DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/xmsg)
+  DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/xmsg
+  COMPONENT Devel
+)
 install(TARGETS xmsg EXPORT xMsgTargets
   LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
   ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
