build: add protobuf to the list of public include directories
Revert 8c3f79308aec to ensure the protobuf include directory is added
to INTERFACE_INCLUDE_DIRECTORIES [1] property of the library, because
other projects using the xMsg library will also need to find the
protobuf headers.

Also remove the include_directories command and set the protobuf headers
directly to the xmsgproto target, otherwise the xmsgproto_headers target
will have the protobuf include directory inside its INCLUDE_DIRECTORIES
property, but it is already set as public in INTERFACE_INCLUDE_DIRECTORIES.

[1]: https://cmake.org/cmake/help/v3.1/prop_tgt/INTERFACE_INCLUDE_DIRECTORIES.html

--- a/src/proto/CMakeLists.txt
+++ b/src/proto/CMakeLists.txt
@@ -1,5 +1,3 @@
-include_directories(SYSTEM ${PROTOBUF_INCLUDE_DIRS})
-
 set(PROTO_FILES
   data.proto
   meta.proto
@@ -10,11 +8,17 @@ PROTOBUF_GENERATE_CPP(PROTO_SOURCES PROTO_HEADERS ${PROTO_FILES})
 
 add_library(xmsgproto OBJECT ${PROTO_SOURCES})
 target_compile_options(xmsgproto PRIVATE -fPIC -Wno-extra)
+target_include_directories(xmsgproto SYSTEM PRIVATE
+  ${PROTOBUF_INCLUDE_DIRS}
+)
 
 add_library(xmsgproto_headers INTERFACE)
 target_link_libraries(xmsgproto_headers INTERFACE ${PROTOBUF_LIBRARIES})
 target_include_directories(xmsgproto_headers INTERFACE
   $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}>)
+target_include_directories(xmsgproto_headers SYSTEM INTERFACE
+  ${PROTOBUF_INCLUDE_DIRS}
+)
 
 install(FILES ${PROTO_HEADERS} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/xmsg/proto)
 install(TARGETS xmsgproto_headers EXPORT xMsgTargets)
