--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -17,9 +17,10 @@ add_library(xmsg SHARED ${XMSG_FILES} $<TARGET_OBJECTS:xmsgproto>)
 target_link_libraries(xmsg xmsgproto_headers ${ZMQ_LIBRARIES})
 target_include_directories(xmsg PUBLIC
   $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
-  $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/src/third_party>
   $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>)
-target_include_directories(xmsg SYSTEM PUBLIC ${ZMQ_INCLUDE_DIRS})
+target_include_directories(xmsg SYSTEM PUBLIC
+  $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/src/third_party>
+  ${ZMQ_INCLUDE_DIRS})
 
 install(DIRECTORY ${CMAKE_SOURCE_DIR}/include/xmsg/
   DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/xmsg
