--- a/src/proto/CMakeLists.txt
+++ b/src/proto/CMakeLists.txt
@@ -7,7 +7,8 @@ set(PROTO_FILES
 PROTOBUF_GENERATE_CPP(PROTO_SOURCES PROTO_HEADERS ${PROTO_FILES})
 
 add_library(xmsgproto OBJECT ${PROTO_SOURCES})
-target_compile_options(xmsgproto PRIVATE -fPIC)
+set_target_properties(xmsgproto PROPERTIES
+  POSITION_INDEPENDENT_CODE ON)
 target_include_directories(xmsgproto SYSTEM PRIVATE
   ${PROTOBUF_INCLUDE_DIRS}
 )
