cmake: ignore proto sources when using clang-tidy
Do not run the static analyzer in the generated protobuf classes.
There is nothing to about about the warnings in those files.

--- a/src/proto/CMakeLists.txt
+++ b/src/proto/CMakeLists.txt
@@ -8,6 +8,7 @@ PROTOBUF_GENERATE_CPP(PROTO_SOURCES PROTO_HEADERS ${PROTO_FILES})
 
 add_library(xmsgproto OBJECT ${PROTO_SOURCES})
 set_target_properties(xmsgproto PROPERTIES
+  CXX_CLANG_TIDY ""
   POSITION_INDEPENDENT_CODE ON)
 target_include_directories(xmsgproto SYSTEM PRIVATE
   ${PROTOBUF_INCLUDE_DIRS}
