--- a/src/proto/CMakeLists.txt
+++ b/src/proto/CMakeLists.txt
@@ -7,6 +7,7 @@ set(PROTO_FILES
 PROTOBUF_GENERATE_CPP(PROTO_SOURCES PROTO_HEADERS ${PROTO_FILES})
 
 add_library(xmsgproto OBJECT ${PROTO_SOURCES})
+target_compile_options(xmsgproto PRIVATE -Wno-extra)
 set_target_properties(xmsgproto PROPERTIES
   CXX_CLANG_TIDY ""
   POSITION_INDEPENDENT_CODE ON)
